# 2D-OPP

./: .gitignore  CMakeLists.txt
include/: best_fit.h  data.h  drawer.h
instances/CJCM/CJCM/: E00N10.ins2D  E00N15.ins2D  E00N23.ins2D  E00X23.ins2D  E02F17.ins2D  E02F20.ins2D  E02F22.ins2D  E02N20.ins2D  E03N10.ins2D  E03N15.ins2D  E03N16.ins2D  E03N17.ins2D  E03X18.ins2D  E04F15.ins2D  E04F17.ins2D  E04F19.ins2D  E04F20.ins2D  E04N15.ins2D  E04N17.ins2D  E04N18.ins2D  E05F15.ins2D  E05F18.ins2D  E05F20.ins2D  E05N15.ins2D  E05N17.ins2D  E05X15.ins2D  E07F15.ins2D  E07N10.ins2D  E07N15.ins2D  E07X15.ins2D  E08F15.ins2D  E08N15.ins2D  E10N10.ins2D  E10N15.ins2D  E10X15.ins2D  E13N10.ins2D  E13N15.ins2D  E13X15.ins2D  E15N10.ins2D  E15N15.ins2D  (+2 more)
instances/MSB/MSB/450/: OPP_2D_10_2s_10I_0W.ins2D  OPP_2D_10_2s_10I_10W.ins2D  OPP_2D_10_2s_10I_20W.ins2D  OPP_2D_10_2s_10I_2W.ins2D  OPP_2D_10_2s_10I_30W.ins2D  OPP_2D_10_2s_10I_40W.ins2D  OPP_2D_10_2s_10I_4W.ins2D  OPP_2D_10_2s_10I_6W.ins2D  OPP_2D_10_2s_10I_8W.ins2D  OPP_2D_10_2s_1I_0W.ins2D  OPP_2D_10_2s_1I_10W.ins2D  OPP_2D_10_2s_1I_20W.ins2D  OPP_2D_10_2s_1I_2W.ins2D  OPP_2D_10_2s_1I_30W.ins2D  OPP_2D_10_2s_1I_40W.ins2D  OPP_2D_10_2s_1I_4W.ins2D  OPP_2D_10_2s_1I_6W.ins2D  OPP_2D_10_2s_1I_8W.ins2D  OPP_2D_10_2s_2I_0W.ins2D  OPP_2D_10_2s_2I_10W.ins2D  OPP_2D_10_2s_2I_20W.ins2D  OPP_2D_10_2s_2I_2W.ins2D  OPP_2D_10_2s_2I_30W.ins2D  OPP_2D_10_2s_2I_40W.ins2D  OPP_2D_10_2s_2I_4W.ins2D  OPP_2D_10_2s_2I_6W.ins2D  OPP_2D_10_2s_2I_8W.ins2D  OPP_2D_10_2s_3I_0W.ins2D  OPP_2D_10_2s_3I_10W.ins2D  OPP_2D_10_2s_3I_20W.ins2D  OPP_2D_10_2s_3I_2W.ins2D  OPP_2D_10_2s_3I_30W.ins2D  OPP_2D_10_2s_3I_40W.ins2D  OPP_2D_10_2s_3I_4W.ins2D  OPP_2D_10_2s_3I_6W.ins2D  OPP_2D_10_2s_3I_8W.ins2D  OPP_2D_10_2s_4I_0W.ins2D  OPP_2D_10_2s_4I_10W.ins2D  OPP_2D_10_2s_4I_20W.ins2D  OPP_2D_10_2s_4I_2W.ins2D  (+410 more)
instances/MSB/MSB/630/: OPP_2D_20_1s_10I_0W.ins2D  OPP_2D_20_1s_10I_10W.ins2D  OPP_2D_20_1s_10I_12W.ins2D  OPP_2D_20_1s_10I_14W.ins2D  OPP_2D_20_1s_10I_16W.ins2D  OPP_2D_20_1s_10I_18W.ins2D  OPP_2D_20_1s_10I_20W.ins2D  OPP_2D_20_1s_10I_22W.ins2D  OPP_2D_20_1s_10I_24W.ins2D  OPP_2D_20_1s_10I_26W.ins2D  OPP_2D_20_1s_10I_28W.ins2D  OPP_2D_20_1s_10I_2W.ins2D  OPP_2D_20_1s_10I_30W.ins2D  OPP_2D_20_1s_10I_32W.ins2D  (+616 more)
src/: best_fit.c  data.c  drawer.c  main.c
